2006-03-29  David Zeuthen  <davidz@redhat.com>

	* configure.in: Add docbook detection
	
	* doc/spec/*: New files
	
	* polkitd/polkit-session.c (polkit_session_finalize): Free the
	questions to prevent memory leak

2006-03-27  Richard Hughes  <richard@hughsie.com>

	* .cvsignore, doc/.cvsignore, libpolkit/.cvsignore,
	polkitd/.cvsignore, privileges/.cvsignore, tools/.cvsignore:
	Add these files.

2006-03-16  David Zeuthen  <davidz@redhat.com>

	* polkitd/polkit-session.c (polkit_session_close): Remember to
	kill the child here

2006-03-16  David Zeuthen  <davidz@redhat.com>

	* polkitd/main.c (main): Bail if we can't become primary owner

	* polkitd/polkit-session.c (data_from_pam): Unref when the child dies
	(polkit_session_initiate_auth): Ref the object after creating child
	(polkit_session_initiator_disconnected): Make sure to nuke the kids

2006-03-15  David Zeuthen  <davidz@redhat.com>

	* polkitd/polkit-manager.h: Include sys/types.h; fixed fd.o
	bug #6280. Patch from Wouter Bolsterlee <uws+freedesktop@xs4all.nl>.

2006-03-14  David Zeuthen  <davidz@redhat.com>

	* polkitd/PolicyKit.in: Change priorities from 90 10 to 98 02 to make
	this work

	* polkitd/PolicyKit.conf.in: Remove user="@POLKIT_USER@" bits as I'm
	not sure we need a dedicated user

	* configure.in: Cosmetic things

2006-03-15  Kay Sievers  <kay.sievers@vrfy.org>

	Add SUSE distro bits.

	* configure.in:
	* policy-kit.in:

2006-03-14  David Zeuthen  <davidz@redhat.com>

	Add a bunch of code; basically a full rewrite moving all queries
	to the daemon.

	* COPYING:
	* Makefile.am:
	* configure.in:
	* libpolkit/Makefile.am:
	* libpolkit/libpolkit-test.c:
	* libpolkit/libpolkit.c: (libpolkit_new_context),
	(libpolkit_free_context),
	(libpolkit_get_allowed_resources_for_privilege_for_uid),
	(libpolkit_is_uid_allowed_for_privilege),
	(libpolkit_get_privilege_list):
	* libpolkit/libpolkit.h:
	* policy-kit.in:
	* polkit-interface-manager.xml:
	* polkit-interface-session.xml:
	* polkit.pc.in: